# silica-stm32f2xx

./: Cargo.toml  Xargo.toml  gen_doc.sh
src/: dma.rs  gpio.rs  lib.rs  rcc.rs  timer.rs  usart.rs
src/dma/: flags.rs  mod.rs
src/flash/: flags.rs  mod.rs
src/gpio/: mod.rs
src/irq/: mod.rs
src/rcc/: flags.rs  mod.rs
src/usart/: flags.rs  mod.rs
