[package]
name = "silica-stm32f2xx"
version = "0.1.0"
authors = ["ithinuel <ithinuel@gmail.com>"]

[dependencies]
silica = { path = "../silica" }
silica-cortexm3 = { path = "../silica-cortexm3" }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins.git"
branch = "auto"
features = ["mem"]
